# qa-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: auth.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
src/routers/: admin.py  auth.py  categories.py  orders.py  products.py  users.py
